--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title">Para Sua Empresa</h3>
-          <div class="resume-item">
+          <!-- <div class="resume-item">
             <h4>Soluções</h4>
             <p>A Artspectro é uma empresa especializada em soluções tecnológicas avançadas para empresas de todos os tamanhos. Nossos serviços e produtos se concentram em proteger, otimizar e aprimorar sua infraestrutura de TI. Aqui está uma visão geral das principais áreas em que somos especializados:</p>
             <ul>
@@ -56,7 +56,7 @@
               <li><strong>Backup e Recuperação de Dados:</strong> Proteger seus dados é crucial para a continuidade dos negócios. Oferecemos soluções de backup automatizadas e recuperação de dados para garantir que seus dados estejam sempre seguros, acessíveis e prontos para serem restaurados em caso de necessidade.</li>
               <li><strong>Serviços de Consultoria e Suporte:</strong> Além de nossas soluções tecnológicas, oferecemos serviços de consultoria e suporte para ajudar a alinhar sua infraestrutura de TI com seus objetivos de negócios. Nossos consultores e engenheiros de sistemas trabalham em estreita colaboração com você para desenvolver estratégias personalizadas que impulsionam a eficiência e a inovação.</li>
             </ul>
-          </div>
+          </div> -->
           <!-- Outros itens removidos por brevidade -->
         </div>
       </div>
